[tool.poetry]
name = "planetsim"
version = "0.1.0"
description = "Symulator Planet"
authors = ["VUKO <it@zarna.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "planetsim.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
